--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -209,7 +209,7 @@ body {
   }
   
   .start {
-    max-width: 100%;
+    
     height: 48px;
     font-size: 14px;
     margin-top: 24px;
